--- a/Remco/index.html
+++ b/Remco/index.html
@@ -23,9 +23,8 @@
     <script type="text/javascript" src="logic.js"></script>
     <!-- <script type="text/javascript" src="static/js/heatmap.js"></script> -->
 
-    <!-- Leaflet heatmap plugin-->
-    <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
-
+  
+    <script src="human_trafficking2.json"></script>
 
   </body>
 
