Added Data page

--- a/Adam/index.html
+++ b/Adam/index.html
@@ -30,27 +30,30 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-6">
-                <img src="./assets/human-trafficking.jpg"></img>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8">
+                    <img class="center-img" src="./assets/human-trafficking.jpg"></img>
+                </div>
+                <div class="col-lg-2"></div>
             </div>
-            <div class="col-lg-3"></div>
-        </div>
-        <span></span>
-        <div class="row">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-5">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Ut vehicula condimentum sapien, sed scelerisque felis malesuada in.
-                Nullam ullamcorper odio at dui mollis suscipit. Phasellus scelerisque condimentum nisl,
-                quis placerat tellus molestie id.
-                </p>
+            <span></span>
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8 center-block text-center">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Ut vehicula condimentum sapien, sed scelerisque felis malesuada in.
+                    Nullam ullamcorper odio at dui mollis suscipit. Phasellus scelerisque condimentum nisl,
+                    quis placerat tellus molestie id. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Ut vehicula condimentum sapien, sed scelerisque felis malesuada in.
+                    Nullam ullamcorper odio at dui mollis suscipit. Phasellus scelerisque condimentum nisl,
+                    quis placerat tellus molestie id.
+                    </p>
+                </div>
+                <div class="col-lg-2"></div>
             </div>
-            <div class="col-lg-3"></div>
         </div>
-    </div>
 
     <!-- Footer -->
 <footer class="page-footer font-small blue">
