Updated files and added raw html files

--- a/Tolu/country_url/index.html
+++ b/Tolu/country_url/index.html
@@ -55,7 +55,7 @@
       <div class="col-md-3 custom-panel">
         <div class="well">
           <h5><strong>SELECT COUNTRY:</strong></h5>
-          <select id="selDataset" onchange="optionChanged(this.value)" style="width: 180px;"></select>
+          <select id="selDataset" onchange="optionChanged(this.value)" style="width: 180px; font-size:medium;"></select>
         </div>
         <br>
         <div class="panel panel-primary">
@@ -132,6 +132,18 @@
       <br>
     </div>
   </div>
+  <hr>
+  <footer class="footer">
+    <div class="container-fluid text-center">
+      <a href="https://github.com/remco-mooij/human-trafficking/" target="_blank">
+        <i class="fab fa-github fa-2x" style="color: #e3e3e3;"></i>
+      </a>
+      <p class="text text-center">
+        <small>© Copyright Tolu Omotunde - Remco Mooij - Kate Minyard - Sree Yallapragada - Adam Iowa -2020</br>
+          UNC CHAPELHILL© Data Analytics Boot Camp</small>
+      </p>
+    </div>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
