Updated files and added raw html files

--- a/Tolu/HTML_Stuff/country.html
+++ b/Tolu/HTML_Stuff/country.html
@@ -98,7 +98,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-12">
         <div id="fatality" style="text-align: center;">
-          <h2><strong>MAP OF CRIMES AGAINST HUMANITY WEIGHTED BY FATALITIES</strong></h2>
+          <h2><strong>MAP OF CRIMES AGAINST HUMANITY WEIGHTED BY NUMBER OF FATALITIES</strong></h2>
         </div>
       </div>
     </div>
