--- a/Tolu/HTML_Stuff/index.html
+++ b/Tolu/HTML_Stuff/index.html
@@ -100,7 +100,7 @@
     <div class="row">
       <div class="col-xs-12  col-md-12">
         <div class="article">
-          <p style="text-align:justify;"> According to <a href="https://migrationdataportal.org/themes/human-trafficking" target="_blank">Migration Data Portal</a>, the crime of human trafficking is complex and dynamic, taking place in a wide variety of contexts and difficult to
+          <p style="text-align:justify;"> According to <a href="https://migrationdataportal.org/themes/human-trafficking" target="_blank"style="color: dimgrey;">Migration Data Portal</a>, the crime of human trafficking is complex and dynamic, taking place in a wide variety of contexts and difficult to
           detect. One of the greatest challenges in developing targeted counter-trafficking responses and measuring their impact
           is the lack of reliable, high-quality data related to the scale of human trafficking and the profile of victims.
           
