--- a/Tolu/HTML_Stuff/index.html
+++ b/Tolu/HTML_Stuff/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Human Trafficking</title>
+  <title>HUMAN TRAFFICKING</title>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style3.css">
   <link rel="stylesheet" href="assets/css/d3Style.css">
 </head>
 
@@ -78,6 +79,24 @@
           </p>
         </div>
       </div>
+    </div>
+  </div>
+  <br>
+  <div class="header">
+    <div class="row">
+      <div class="col-xs-12 col-md-12" id="start">
+        <h1 style="text-align: center;"><strong> MAP OF HUMAN TRAFFICKING ACROSS THE GLOBE </strong>
+        </h1>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="header">
+    <div class="row">
+      <div id="map"></div> 
+      <script type="text/javascript" src="config.js"></script>
+      <script type="text/javascript" src="logic.js"></script>
+      <!-- <script src="human_trafficking2.json"></script> -->
     </div>
   </div>
   <br>
