--- a/Tolu/HTML_Stuff/index.html
+++ b/Tolu/HTML_Stuff/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>HUMAN TRAFFICKING</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -15,8 +21,14 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/style3.css">
   <link rel="stylesheet" href="assets/css/d3Style.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 
 <body>
@@ -85,25 +97,41 @@
   <div class="header">
     <div class="row">
       <div class="col-xs-12 col-md-12" id="start">
-        <h1 style="text-align: center;"><strong> MAP OF HUMAN TRAFFICKING ACROSS THE GLOBE </strong>
+        <h1 style="text-align: center;"><strong> HUMAN TRAFFICKING EVENTS ACROSS THE GLOBE </strong>
         </h1>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="row col-md-12">
+        <div class="col-md-12">
+          <div id="map" class="map-format"></div>
+        </div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div id="test">
+        <br>
+        <h6><strong>SELECT MAP</strong></h6>
+        <select id="selectMap" style="width: 130px; font-size:medium;">
+          <option>Human Trafficking</option>
+          <option>Poverty &lt$1.90/day</option>
+          <option>Poverty &lt$3.20/day</option>
+          <option>Poverty &lt$5.50/day</option>
+        </select>
       </div>
     </div>
   </div>
   <br>
   <div class="header">
     <div class="row">
-      <div id="map"></div> 
-      <script type="text/javascript" src="config.js"></script>
-      <script type="text/javascript" src="logic.js"></script>
-      <!-- <script src="human_trafficking2.json"></script> -->
-    </div>
-  </div>
-  <br>
-  <div class="header">
-    <div class="row">
       <div class="col-xs-12 col-md-12" id="start">
-        <h1 style="text-align: center;"><strong> RELATIONSHIP BETWEEN HUMAN TRAFFICKING EVENTS AND INDICATORS </strong></h1>
+        <h1 style="text-align: center;"><strong> HUMAN TRAFFICKING INDICATORS </strong></h1>
       </div>
     </div>
   </div>
@@ -153,6 +181,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
+  <script type="text/javascript" src="assets/js/config.js"></script>
+  <script type="text/javascript" src="assets/js/logic.js"></script>
 
 </body>
 
