--- a/Tolu/HTML_Stuff/index.html
+++ b/Tolu/HTML_Stuff/index.html
@@ -134,7 +134,7 @@
   <div class="header">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1 style="text-align: center;"><strong> HUMAN TRAFFICKING ROUTES NETWORK </strong>
+        <h1 style="text-align: center;"><strong> NETWORK SHOWING HUMAN TRAFFICKING ROUTES</strong>
         </h1>
       </div>
     </div>
