--- a/Adam/data.html
+++ b/Adam/data.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trends In Human Trafficking</title>
-    <link rel="stylesheet" href="./Resources/style.css" type="text/css">
+    <!-- <link rel="stylesheet" href="./Resources/style.css" type="text/css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -13,64 +13,90 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li>
-                    <a class="nav-item nav-link" href="index.html">Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="map.html">Map</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container-fluid">
-        <div class="row margin-top-50">
-            <div class="col-md-2"></div>
-            <div class="col-md-9">
-                <table id="my-table" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Base Country</th>
-                            <th>Base Country Latitude</th>
-                            <th>Base Country Longitude</th>
-                            <th>Relation Country</th>
-                            <th>Relation Country Latitude</th>
-                            <th>Relation Country Longitude</th>
-                            <th>Men</th>
-                            <th>Women</th>
-                            <th>Children</th>
-                            <th>Sex Trafficking</th>
-                            <th>Forced Labor</th>
-                            <th>Debt Bondage</th>
-                            <th>Description</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
+    <!-- <div class="wrapper">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li>
+                        <a class="nav-item nav-link" href="index.html">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="map.html">Map</a>
+                    </li>
+                </ul>
             </div>
-        </div>    
+        </nav>
+ -->
+
+        <div class="container">
+            <div class="row margin-top-50">
+                <div class="col-md-2">
+                    <aside class="filters">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">Search Filters</div>
+                            <div class="panel-body">
+                                <select id="selFilterQuery" >
+                                    <option value="Base Country">Base Country</option>
+                                    <option value="Relation Country">Relation Country</option>
+                                </select>
+                                <form>
+                                    <div class="form-group">
+                                        <ul class="list-group" id="filters">
+                                            <li class="filter list-group-item">
+                                                <label for="country" id="SearchTerm">Enter a Base Country</label>
+                                                <input class="form-control" id="term" type="text" placeholder="Afghanistan">
+                                            </li>
+                                        </ul> 
+                                    </div>
+                                    <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                                </form>
+                            </div>
+                        </div>
+                    </aside>
+                </div>
+                    
+                <div class="col-md-10">
+                    <div id="table-area" class="">
+                        <table id="my-table" class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Base Country</th>
+                                    <th>Base Country Latitude</th>
+                                    <th>Base Country Longitude</th>
+                                    <th>Relation Country</th>
+                                    <th>Relation Country Latitude</th>
+                                    <th>Relation Country Longitude</th>
+                                    <th>Men</th>
+                                    <th>Women</th>
+                                    <th>Children</th>
+                                    <th>Sex Trafficking</th>
+                                    <th>Forced Labor</th>
+                                    <th>Debt Bondage</th>
+                                    <th>Description</th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                </div> 
+            </div>     
+        </div>
+
+        <!-- Footer -->
+        <footer class="page-footer font-small blue">
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">© 2020 Copyright</div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+        <!-- <script src="../Adam/Resources/trafficking_report.js"></script>  -->
+        <script src="app2.js"></script>
     </div>
-
-
-
-
-    
-    <!-- Footer -->
-    <footer class="page-footer font-small blue">
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright</div>
-        <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-    <script src="../Adam/Resources/trafficking_report.js"></script>
-    <script src="../Adam/Resources/app.js"></script>
 </body>
 </html>
