--- a/Tolu/HTML_Stuff/index.html
+++ b/Tolu/HTML_Stuff/index.html
@@ -48,13 +48,13 @@
           <a class="nav-link" href="country.html"><strong>COMPARISON</strong></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><strong>DATA</strong></a>
+          <a class="nav-link" href="datapage.html"><strong>DATA</strong></a>
         </li>
       </ul>
     </div>
   </nav>
   <div class="container-fluid banner">
-    <div class="banner-text text-center">
+    <div class="hero banner-text text-center">
       <h1 style="text-align: center;"><strong>I AM NOT FOR SALE - SAY NO TO HUMAN TRAFFICKING</strong></h1>
       <div class="down-arrow"><a href="#start"><img src="assets/Images/down-arrow.png"></a></div>
     </div>
