--- a/Tolu/HTML_Stuff/country.html
+++ b/Tolu/HTML_Stuff/country.html
@@ -44,7 +44,7 @@
             <a class="nav-link" href="country.html"><strong>COMPARISON</strong></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><strong>DATA</strong></a>
+            <a class="nav-link" href="datapage.html"><strong>DATA</strong></a>
           </li>
         </ul>
       </div>
