Updated html files

--- a/Tolu/datapage.html
+++ b/Tolu/datapage.html
@@ -30,10 +30,10 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style4.css">
+    <link rel="stylesheet" href="static/css/style4.css">
   </head>
 
-  <body>
+  <body style="font-size: 20px;">
     <nav class="navbar fixed-top navbar-expand-md navbar-custom ">
       <a class="navbar-brand" href="index.html">
         <a class="nav-link active-nav" href="index.html" style="color: white;"><i class="fas fa-home"
@@ -82,12 +82,13 @@
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <br><br>
                 </form>
               </div>
             </div>
           </aside>
         </div>
-    
+        <hr>
         <div class="col-md-12">
           <div id="table-area">
             <table id="my-table" class="table table-striped" style="border: medium solid #FFFFFF; background-color: lightgrey; border: 3; width: 100%; table-layout: auto; font-size:13px; text-align: center;">
@@ -132,6 +133,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
     <script src='https://api.mapbox.com/mapbox.js/plugins/arc.js/v0.1.0/arc.js'></script>
-    <script type="text/javascript" src="assets/js/app3.js"></script>
+    <script type="text/javascript" src="static/js/app3.js"></script>
   </body>
 </html>
