--- a/Tolu/country.html
+++ b/Tolu/country.html
@@ -20,7 +20,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style2.css">
+  <link rel="stylesheet" href="static/css/style2.css">
   <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-core.min.js"></script>
   <script src="https://cdn.anychart.com/releases/8.7.1/js/anychart-linear-gauge.min.js"></script>
   <script src="https://www.amcharts.com/lib/4/core.js"></script>
@@ -210,9 +210,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
-  <script type="text/javascript" src="assets/js/app2.js"></script>
+  <script type="text/javascript" src="static/js/app2.js"></script>
   <!-- API key -->
-  <script type="text/javascript" src="assets/js/config.js"></script>
+  <script type="text/javascript" src="static/js/config.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </body>
 
