--- a/Tolu/index.html
+++ b/Tolu/index.html
@@ -20,8 +20,8 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/d3Style.css">
+  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="static/css/d3Style.css">
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -32,6 +32,7 @@
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <script src='https://api.mapbox.com/mapbox.js/v3.3.0/mapbox.js'></script>
   <link href='https://api.mapbox.com/mapbox.js/v3.3.0/mapbox.css' rel='stylesheet' />
+
 </head>
 
 <body>
@@ -56,7 +57,7 @@
   <div class="container-fluid banner">
     <div class="hero banner-text text-center">
       <h1 style="text-align: center;"><strong>I AM NOT FOR SALE - SAY NO TO HUMAN TRAFFICKING</strong></h1>
-      <div class="down-arrow"><a href="#start"><img src="assets/Images/down-arrow.png"></a></div>
+      <div class="down-arrow"><a href="#start"><img src="static/Images/down-arrow.png"></a></div>
     </div>
   </div>
   <div class="header">
@@ -161,7 +162,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12  col-md-12">
-        <div id="scatter">
+        <div id="scatter" href="/scatter">
           <!-- We append our chart here. -->
         </div>
       </div>
@@ -204,9 +205,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
   <script src='https://api.mapbox.com/mapbox.js/plugins/arc.js/v0.1.0/arc.js'></script>
-  <script type="text/javascript" src="assets/js/app.js"></script>
-  <script type="text/javascript" src="assets/js/config.js"></script>
-  <script type="text/javascript" src="assets/js/logic.js"></script>
+  <script type="text/javascript" src="../static/js/app.js"></script>
+  <script type="text/javascript" src="../static/js/config.js"></script>
+  <script type="text/javascript" src="../static/js/logic.js"></script>
 </body>
 
 </html>
